--- a/portfolio.html
+++ b/portfolio.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>    
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
         <!--Шапка с элементами навигации-->
-        <nav class="nav">
+        <nav class="container">
             <a href="./index.html" class="logo-web link">Web<span class="logo-studio-head">Studio</span></a>
             <ul class="nav-item list">
                 <li>
@@ -30,101 +31,113 @@
                 <li>
                     <a href="" class="nav-item link">Контакты</a>
                 </li>
-
             </ul>
         </nav>
-        <div class="header-contacts">
+
+        <div class="header-contacts container">
             <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
             <a href="tel:+380961111111" class="phone link">+38 096 111 11 11</a>
         </div>
-
     </header>
     <main>
         <!-- Скрытый заголовок страницы portfolio -->
-        <h1></h1>
+        <h1 class="portfolio-title"></h1>
         <!--Кнопки фильтров-->
-        <div>
-            <section class="filter-buttons">
-                <!-- Скрытый заголовок -->
-                <h2></h2>
-                <ul class="filter-buttons list">
-                    <li>
-                        <button class="filter-button" type="button">Все</button>
-                    </li>
-                    <li>
-                        <button class="filter-button" type="button">Веб-сайты</button>
-                    </li>
-                    <li>
-                        <button class="filter-button" type="button">Приложения</button>
-                    </li>
-                    <li>
-                        <button class="filter-button" type="button">Дизайн</button>
-                    </li>
-                    <li>
-                        <button class="filter-button" type="button">Маркетинг</button>
-                    </li>
-                </ul>
-            </section>
-        </div>
-        <!-- Секция проектов -->
-        <div>
-            <section class="our-projects">
-                <!-- Скрытый заголовок  -->
-                <h2></h2>
-                <ul class="our-projects list">
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-1.jpg" alt="веб-сайт технокряк" width="370"
-                                height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-2.jpg" alt="постер раздел дизайн" width="370"
-                                height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-3.jpg"
-                                alt="ресторан си фуд раздел приложение" width="370" height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-4.jpg" alt="проект прайм раздел маркетинг"
-                                width="370" height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-5.jpg" alt="проект боксез раздел приложение"
-                                width="370" height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-6.jpg" alt="вебсайт инпирэйшн хэз но бордерз"
-                                width="370" height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-7.jpg"
-                                alt="издание лимитед эдишн раздел дизайн" width="370" height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-8.jpg" alt="проект лаб раздел маркетинг"
-                                width="370" height="404"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/our-projects/project-9.jpg" alt="гроуинг бизнес раздел приложение"
-                                width="370" height="404"></a>
-                    </li>
-                </ul>
-            </section>
-        </div>
+        <section class="portfolio">
+            <!-- Скрытый заголовок -->
+            <h2 class="portfolio-title"></h2>
+            <ul class="filter-buttons list">
+                <li> <button class="filter-button" type="button">Все</button>
+                </li>
+                <li>
+                    <button class="filter-button" type="button">Веб-сайты</button>
+                </li>
+                <li>
+                    <button class="filter-button" type="button">Приложения</button>
+                </li>
+                <li>
+                    <button class="filter-button" type="button">Дизайн</button>
+                </li>
+                <li>
+                    <button class="filter-button" type="button">Маркетинг</button>
+                </li>
+            </ul>
+            <!-- Скрытый заголовок  -->
+            <h2 class="portfolio-title"></h2>
+            <ul class="our-projects list">
+                <li>
+                    <a href=""><img src="./images/our-projects/project-1.jpg" alt="веб-сайт технокряк" width="370"
+                            height="294"></a>
+                    <p class="our-project-name">Технокряк</p>
+                    <p class="our-project-id">Веб-сайт</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-2.jpg" alt="постер раздел дизайн" width="370"
+                            height="294"></a>
+                    <p class="our-project-name">Постер New Orlean vs Golden Star</p>
+                    <p class="our-project-id">Дизайн</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-3.jpg" alt="ресторан си фуд раздел приложение"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Ресторан Seafood</p>
+                    <p class="our-project-id">Приложение</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-4.jpg" alt="проект прайм раздел маркетинг"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Проект Prime</p>
+                    <p class="our-project-id">Маркетинг</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-5.jpg" alt="проект боксез раздел приложение"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Проект Boxes</p>
+                    <p class="our-project-id">Приложение</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-6.jpg" alt="вебсайт инпирэйшн хэз но бордерз"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Inspiration has no Borders</p>
+                    <p class="our-project-id">Веб-сайт</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-7.jpg" alt="издание лимитед эдишн раздел дизайн"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Издание Limited Edition</p>
+                    <p class="our-project-id">Дизайн</p>
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-8.jpg" alt="проект лаб раздел маркетинг"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Проект LAB</p>
+                    <p class="our-project-id">Маркетинг</p>
+
+                </li>
+                <li>
+                    <a href=""><img src="./images/our-projects/project-9.jpg" alt="гроуинг бизнес раздел приложение"
+                            width="370" height="294"></a>
+                    <p class="our-project-name">Growing Business</p>
+                    <p class="our-project-id">Приложение</p>
+
+                </li>
+            </ul>
+            <!-- </section> -->
     </main>
     <footer>
         <!--Подвал-->
         <div class="footer">
-            <a href="./index.html" class="logo-web link">Web<span class="logo-studio-foot">Studio</span></a>
-            <!--Адреса и телефон-->
-
-            <div class="footer-contacts">
-                <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
-                <a class="mail link" href="mailto:info@example.com">info@example.com</a>
-                <a class="phone link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <div class="container">
+                <a href="./index.html" class="logo-web link">Web<span class="logo-studio-foot">Studio</span></a>
+                <!--Адреса и телефон-->
+                <div class="footer-contacts">
+                    <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
+                    <a class="mail link" href="mailto:info@example.com">info@example.com</a>
+                    <a class="phone link" href="tel:+380991111111"><br>+38 099 111 11 11</a>
+                </div>
             </div>
         </div>
     </footer>
-</body>
-
-</html>
+        </body>
+        
+        </html>
