--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
             <nav class="container">
             <a href="./index.html" class="logo-web link">Web<span class="logo-studio-head">Studio</span></a>
             <ul class="nav-item list">
-                <li>
+                <li class="item">
                     <a href="./index.html" class="nav-item link current">Студия</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./portfolio.html" class="nav-item link">Портфолио</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="" class="nav-item link">Контакты</a>
                 </li>
-            </ul>
-            </nav>
+            </ul>            
         
-        <div class="header-contacts container">
-            <a href="mailto:info@devstudio.com" class="mail link">info@devstudio.com</a>
+        <div class="header-contacts">
+            <a href="mailto:info@devstudio.com" class="mail-header link">info@devstudio.com</a>
             <a href="tel:+380961111111" class="phone link">+38 096 111 11 11</a>
         </div>
+        </nav>
         
 
     </header>
@@ -53,22 +53,22 @@
             <div class="container">
                 <h2 class="features-list-title"></h2>
                 <ul class="features-list list">
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-item">Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="features-item">Задача организации, в особенности же рамки и место обучения кадров влечет
                             за собой.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Планирование</h3>
                         <p class="features-item">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-item">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
@@ -81,13 +81,13 @@
             <div class="container">
                 <h2 class="what-are-we-doing-title">Чем мы занимаемся</h2>
                 <ul class="what-are-we-doing-list list">
-                    <li>
+                    <li class="item">
                         <img src="./images/what-are-we-doing/box-1.jpg" alt="руки на клавиатуре" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/what-are-we-doing/box-2.jpg" alt="ноутбук и смартфон" width="370" height="294">
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/what-are-we-doing/box-3.jpg" alt="цветовая палитра на планшете" width="370" height="294">
                     </li>
                 </ul>
@@ -100,23 +100,23 @@
             <div class="container">
                 <h2 class="our-team-title">Наша команда</h2>
                 <ul class="our-team-list list">
-                <li>
+                <li class="item">
                     <img src="./images/our-team/ihor.jpg" alt="Мужчина в очках и рубашке" width="270" height="260">
                     <p class="our-team-name">Игорь Демьяненко</p>
                     <p class="our-team-spec">Product Designer</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/our-team/olha.jpg" alt="Белокурая девушка в очках и костюме" width="270"
                         height="260">
                     <p class="our-team-name">Ольга Репина</p>
                     <p class="our-team-spec">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/our-team/nik.jpg" alt="Мужчина в рубашке" width="270" height="260">
                     <p class="our-team-name">Николай Тарасов</p>
                     <p class="our-team-spec">Marketing</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/our-team/michael.jpg" alt="Мужчина в очках и футболке" width="270" height="260">
                     <p class="our-team-name">Михаил Ермаков</p>
                     <p class="our-team-spec">UI Designer</p>
