--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
                 <h2 class="our-team-title">Наша команда</h2>
                 <ul class="our-team-list list">
                 <li class="item">
-                    <img src="./images/our-team/ihor.jpg" alt="Мужчина в очках и рубашке" width="270" height="260">
+                    <img class="team-image" src="./images/our-team/ihor.jpg" alt="Мужчина в очках и рубашке" width="270" height="260">
                     <p class="our-team-name">Игорь Демьяненко</p>
                     <p class="our-team-spec">Product Designer</p>
                 </li>
                 <li class="item">
-                    <img src="./images/our-team/olha.jpg" alt="Белокурая девушка в очках и костюме" width="270"
+                    <img class="team-image" src="./images/our-team/olha.jpg" alt="Белокурая девушка в очках и костюме" width="270"
                         height="260">
                     <p class="our-team-name">Ольга Репина</p>
                     <p class="our-team-spec">Frontend Developer</p>
                 </li>
                 <li class="item">
-                    <img src="./images/our-team/nik.jpg" alt="Мужчина в рубашке" width="270" height="260">
+                    <img class="team-image" src="./images/our-team/nik.jpg" alt="Мужчина в рубашке" width="270" height="260">
                     <p class="our-team-name">Николай Тарасов</p>
                     <p class="our-team-spec">Marketing</p>
                 </li>
                 <li class="item">
-                    <img src="./images/our-team/michael.jpg" alt="Мужчина в очках и футболке" width="270" height="260">
+                    <img class="team-image" src="./images/our-team/michael.jpg" alt="Мужчина в очках и футболке" width="270" height="260">
                     <p class="our-team-name">Михаил Ермаков</p>
                     <p class="our-team-spec">UI Designer</p>
                 </li>
