--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="header-contacts">
             <a href="mailto:info@devstudio.com" class="mail-header link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="phone link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="phone-header link">+38 096 111 11 11</a>
         </div>
         </nav>
         
@@ -102,24 +102,28 @@
                 <ul class="our-team-list list">
                 <li class="item">
                     <img class="team-image" src="./images/our-team/ihor.jpg" alt="Мужчина в очках и рубашке" width="270" height="260">
-                    <p class="our-team-name">Игорь Демьяненко</p>
+                    <div class="our-team-sign"><p class="our-team-name">Игорь Демьяненко</p>
                     <p class="our-team-spec">Product Designer</p>
+                    </div>
                 </li>
                 <li class="item">
                     <img class="team-image" src="./images/our-team/olha.jpg" alt="Белокурая девушка в очках и костюме" width="270"
                         height="260">
-                    <p class="our-team-name">Ольга Репина</p>
+                    <div class="our-team-sign"><p class="our-team-name">Ольга Репина</p>
                     <p class="our-team-spec">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="item">
                     <img class="team-image" src="./images/our-team/nik.jpg" alt="Мужчина в рубашке" width="270" height="260">
-                    <p class="our-team-name">Николай Тарасов</p>
+                    <div class="our-team-sign"><p class="our-team-name">Николай Тарасов</p>
                     <p class="our-team-spec">Marketing</p>
+                    </div>
                 </li>
                 <li class="item">
                     <img class="team-image" src="./images/our-team/michael.jpg" alt="Мужчина в очках и футболке" width="270" height="260">
-                    <p class="our-team-name">Михаил Ермаков</p>
+                    <div class="our-team-sign"><p class="our-team-name">Михаил Ермаков</p>
                     <p class="our-team-spec">UI Designer</p>
+                    </div>
                 </li>
                 </ul>
             </div>
@@ -129,17 +133,17 @@
     <footer>
         <!--Подвал-->        
         <div class="footer">
-            <div class="container">             
+            <div class="container">
                 <a href="./index.html" class="logo-web link">Web<span class="logo-studio-foot">Studio</span></a>
-                    <!--Адреса и телефон-->            
-            <div class="footer-contacts">
-                <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
-                <a class="mail link" href="mailto:info@example.com">info@example.com</a>
-                <a class="phone link" href="tel:+380991111111"><br>+38 099 111 11 11</a>             
+                <!--Адреса и телефон-->
+                <div class="footer-contacts">
+                    <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
+                    <a class="mail link" href="mailto:info@example.com">info@example.com</a>
+                    <a class="phone link" href="tel:+380991111111"><br>+38 099 111 11 11</a>
+                </div>
             </div>
-            </div>
+        </div>
         </div>        
     </footer>
 </body>
-
 </html>
