--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             </ul>    
             <div class="header-contacts">
                 <a href="mailto:info@devstudio.com" class="mail-header link">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="phone link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="phone-header link">+38 096 111 11 11</a>
             </div>
         </nav>
        
