--- a/index.html
+++ b/index.html
@@ -131,19 +131,18 @@
         
     </main>
     <footer>
-        <!--Подвал-->        
+        <!--Подвал-->
         <div class="footer">
             <div class="container">
                 <a href="./index.html" class="logo-web link">Web<span class="logo-studio-foot">Studio</span></a>
-                <!--Адреса и телефон-->
+                <!--Адреса и контакты-->
+                <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
                 <div class="footer-contacts">
-                    <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
                     <a class="mail link" href="mailto:info@example.com">info@example.com</a>
-                    <a class="phone link" href="tel:+380991111111"><br>+38 099 111 11 11</a>
+                    <a class="phone link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </div>
             </div>
         </div>
-        </div>        
     </footer>
 </body>
 </html>
